ajout git et zsh

--- a/tp1.yml
+++ b/tp1.yml
@@ -6,4 +6,14 @@
       apt:
         name: htop
         state: present
+
+    - name: installation zsh
+      apt:
+        name: zsh
+        state: present
+
+    - name: installation de git
+      apt:
+        name: git
+        state: present
 ...
